--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.1",
   "description": "tea first 404 nft ",
   "main": "index.js",
+  "repository": {
+      "type": "git"
+    , "url": "https://github.com/twitter/bootstrap.git"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
